@@ -1,6 +1,6 @@
 % $Id$
 % htlatex tex4ht-xhtml-xtpipes "xhtml,next,3" "" "-d./"
-
+%
 % Copyright (C) 2009, 2010 TeX Users Group.
 % Copyright (C) 1996--2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
@@ -97,7 +97,6 @@
  
 \<XhtmlEmails.java\><<< 
 package tex4ht;
-/*
 /* XhtmlEmails.java (`version), generated from `jobname.tex
    Copyright (C) 2009, 2010 TeX Users Group
    Copyright (C) `CopyYear.2008. Eitan M. Gurari
